# amd-llvm-project

clang/: CMakeLists.txt  README.md
clang/lib/AST/: ASTContext.cpp  Decl.cpp  DeclBase.cpp  DeclCXX.cpp  ItaniumMangle.cpp  RecordLayoutBuilder.cpp  Type.cpp  TypePrinter.cpp
clang/lib/Basic/: CMakeLists.txt  Cuda.cpp  IdentifierTable.cpp  Module.cpp  SourceManager.cpp  TargetInfo.cpp  Targets.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGAMPRuntime.cpp  CGAMPRuntime.h  CGAtomic.cpp  CGBuiltin.cpp  CGCUDANV.cpp  CGCall.cpp  CGClass.cpp  CGCleanup.cpp  CGDebugInfo.cpp  CGDebugInfo.h  CGDecl.cpp  CGDeclCXX.cpp  CGException.cpp  CGExpr.cpp  CGExprCXX.cpp  CGExprComplex.cpp  CGExprConstant.cpp  CGExprScalar.cpp  CGGPUBuiltin.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGOpenMPRuntimeAMDGCN.cpp  CGOpenMPRuntimeGPU.cpp  CGOpenMPRuntimeGPU.h  CGOpenMPRuntimeNVPTX.cpp  CGOpenMPRuntimeNVPTX.h  CGRecordLayoutBuilder.cpp  CGStmtOpenMP.cpp  CGVTT.cpp  CGVTables.cpp  CMakeLists.txt  CodeGenABITypes.cpp  CodeGenAction.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h  CodeGenTypes.cpp  CodeGenTypes.h  (+2 more)
clang/lib/Driver/: Action.cpp  CMakeLists.txt  Compilation.cpp  Driver.cpp  SanitizerArgs.cpp  ToolChain.cpp  ToolChains.cpp  ToolChains.h  Tools.cpp  Tools.h  Types.cpp
clang/lib/Frontend/: CompilerInstance.cpp  CompilerInvocation.cpp  FrontendActions.cpp  InitPreprocessor.cpp
clang/lib/Headers/: CMakeLists.txt  __clang_cuda_cmath.h  __clang_cuda_complex_builtins.h  __clang_cuda_math.h  __clang_cuda_math_forward_declares.h  __clang_hip_cmath.h  __clang_hip_complex_builtins.h  __clang_hip_libdevice_declares.h  __clang_hip_math.h  __clang_hip_runtime_wrapper.h  offload_macros.h
clang/lib/Parse/: ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParseExprCXX.cpp  ParseInit.cpp  ParseStmt.cpp  ParseTentative.cpp  Parser.cpp
clang/lib/Sema/: CMakeLists.txt  SemaCUDA.cpp  SemaCast.cpp  SemaChecking.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaDeclCXX.cpp  SemaExpr.cpp  SemaExprCXX.cpp  SemaExprMember.cpp  SemaInit.cpp  SemaLambda.cpp  SemaLookup.cpp  SemaOpenMP.cpp  SemaOverload.cpp  SemaStmtAsm.cpp  SemaTemplate.cpp  SemaTemplateInstantiateDecl.cpp  SemaType.cpp  StmtResInfer.cpp
clang/lib/Serialization/: ASTReaderDecl.cpp  ASTWriterDecl.cpp
clang/test/CodeGen/: address-space.c  amdgcn-auto-var.cpp  default-address-space.c  target-data.c  tbaa-struct.cpp
clang/test/CodeGenCUDA/: address-spaces.cu  convergent.cu  device-var-init.cu  device-vtable.cu  filter-decl.cu  function-overload.cu  kernel-args-alignment.cu  llvm-used.cu  printf.cu
clang/test/CodeGenCXX/: amdgcn-automatic-variable.cpp  amdgcn-global-init.cpp  cxx0x-initializer-stdinitializerlist.cpp
clang/test/CodeGenHCC/: register-control.cpp
clang/test/CodeGenOpenCL/: amdgpu-alignment.cl  amdgpu-call-kernel.cl  amdgpu-nullptr.cl  blocks.cl  opencl_types.cl  size_t.cl
clang/test/Driver/: hip-toolchain-rdc.hip
clang/test/OpenMP/: nvptx_lambda_capturing.cpp  nvptx_parallel_codegen.cpp  nvptx_parallel_for_codegen.cpp  nvptx_target_codegen.cpp  nvptx_target_parallel_num_threads_codegen.cpp  nvptx_teams_reduction_codegen.cpp  parallel_reduction_codegen.cpp
clang/test/SemaCXX/: overload-member-call.cpp
clang/test/SemaHCC/: register-control.cpp
clang/test/SemaOpenCL/: address-spaces-conversions-cl2.0.cl  address-spaces.cl
clang/tools/clang-offload-bundler/: ClangOffloadBundler.cpp
clang/tools/clang-unbundle-archive/: ClangUnbundleArchive.cpp
clang/tools/driver/: CMakeLists.txt
clang/unittests/Format/: FormatTestTextProto.cpp
compiler-rt/cmake/: base-config-ix.cmake  builtin-config-ix.cmake
compiler-rt/cmake/Modules/: CompilerRTUtils.cmake
compiler-rt/lib/builtins/: CMakeLists.txt
llvm/lib/Analysis/: InstructionSimplify.cpp  LoopAccessAnalysis.cpp
llvm/lib/CodeGen/: MachineSink.cpp
llvm/lib/Support/: CommandLine.cpp  TargetParser.cpp
llvm/tools/llvm-link/: llvm-link.cpp
mlir/utils/vscode/: package-lock.json
openmp/: CMakeLists.txt
openmp/libompd/cuda_examples/: test_target_generic.c
openmp/libompd/gdb-plugin/: CMakeLists.txt  __init__.py  loadompd.py  ompdModule.c  setup.py  test_callbacks.c
openmp/libompd/gdb-plugin/ompd/: __init__.py  frame_filter.py  ompd.py  ompd_address_space.py  ompd_callbacks.py  ompd_handles.py
openmp/libompd/gdb-wrapper/: CMakeLists.txt  Callbacks.cpp  Callbacks.h  ChildProcess.cpp  ChildProcess.h  CudaGdb.cpp  CudaGdb.h  Debug.cpp  Debug.h  GdbProcess.cpp  GdbProcess.h  InputChecker.cpp  InputChecker.h  InputOutputManager.cpp  InputOutputManager.h  OMPDCommand.cpp  OMPDCommand.h  OMPDContext.cpp  OMPDContext.h  OutputString.cpp  OutputString.h  ProcessSpawn.cpp  ProcessSpawn.h  StringParser.cpp  StringParser.h  driver.py  gdb_wrapper.cpp  odb.cpp  ompd_typedefs.h  regex_test.cpp  regex_test_v2.cpp
openmp/libompd/gdb-wrapper/cmake/Modules/: FindCudaGDB.cmake
openmp/libompd/src/: CMakeLists.txt  TargetValue.cpp  omp-debug.cpp  omp-debug.h  omp-icv.cpp  omp-state.cpp  ompd-private.h
openmp/libompd/test/: CMakeLists.txt  lit.cfg  (+1 more)
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/plugins/hsa/: CMakeLists.txt
openmp/libomptarget/plugins/hsa/hostrpc/: base_types.hpp  find_metadata.hpp  hostcall.cpp  hostcall.h  hostcall.hpp  hostcall_interface.cpp  hostcall_interface.hpp  hsa.hpp  interface.hpp  memory.cpp  memory.hpp  openmp_hostcall.cpp
openmp/libomptarget/plugins/hsa/hostrpc/detail/: client_impl.hpp  common.hpp  platform.hpp  server_impl.hpp
openmp/libomptarget/plugins/hsa/impl/: amd_hostcall.h  atmi.cpp  atmi.h  atmi_hostcall.c  atmi_interop_hsa.cpp  atmi_interop_hsa.h  atmi_runtime.h  comgr-metadata.cpp  comgr-metadata.h  comgr.cpp  comgr.h  data.cpp  data.h  hostcall.cpp  hostcall_handlers.c  hostcall_impl.h  hostcall_internal.h  hostcall_printf.c  hostcall_service_id.h  hostrpc.h  hostrpc_handlers.c  hostrpc_varfn.c  internal.h  machine.cpp  machine.h  msgpack.cpp  msgpack.h  openmp_amd_comgr.h  rt.h  system.cpp  task.cpp  utils.cpp
openmp/libomptarget/plugins/hsa/src/: rtl.cpp
openmp/runtime/: CMakeLists.txt
(+188 files in other folders)
